# cybernetic-governance-engine

./: .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTION_STRATEGY.md  DEMO_SCRIPT.md  DEPLOYMENT_ANALYSIS.md  Dockerfile  Dockerfile.agent  Dockerfile.nemo  Dockerfile.vllm  FUNCTIONAL_SPEC.md  GAP_ANALYSIS.md  GAP_ANALYSIS_REPORT.md  ISO_42001_COMPLIANCE.md  README.md  README_GOVERNANCE.md  REVIEW_REPORT.md  STPA_ANALYSIS.md  backend_logs.txt  backend_logs_2.txt  build_agent.py  cloudbuild.yaml  cloudbuild_artifacts.yaml  cloudbuild_gateway.yaml  cloudbuild_nemo.yaml  conflicted_files.txt  current_deployment.yaml  debug_llm.txt  debug_mcp.py  docker-compose.yml  gateway_logs.txt  gateway_logs_v2.txt  gateway_logs_v3.txt  gateway_logs_v4.txt  gateway_logs_v5.txt  gateway_logs_v6.txt  gateway_logs_v7.txt  (+29 more)
.jules/: bolt.md
config/: settings.py
data/: risk_simulation_logs.json  sample_stamp.yaml
deployment/: README.md  backend_service.yaml  bridge_deploy.py  config.yaml  deploy_all.py  deploy_cloud_run.py  deploy_sw.py  finance_policy.rego  generate_diagram.py  nemo_service.yaml  opa_config.yaml  patch_env_vars.py  rebuild_backend.py  service.yaml  system_authz.rego  teardown.py  update_langfuse_secret.py
docs/: ADK_MIGRATION_ANALYSIS.md  AGENTIC_DEVOPS_FEASIBILITY.md  AGENTIC_GATEWAY_ANALYSIS.md  AGENTSIGHT_ANALYSIS.md  AGENT_ENGINE_DEPLOYMENT_GUIDE.md  AGENT_ENGINE_DEPLOYMENT_STRATEGY.md  ARCHITECTURAL_DECISION_RECORD.md  ARCHITECTURE.md  ARCHITECTURE_II_ANALYSIS.md  ARTICLE.md  CAUSAL_DESIGN.md  CAUSAL_ENGINE.md  CLOUD_RUN_DEPLOYMENT_ANALYSIS.md  CURRENT_IMPROVEMENTS.md  CURRICULUM_IMPLEMENTATION_ANALYSIS.md  DEPLOYMENT_ANALYSIS.md  DEPLOYMENT_DECISION_RECORD.md  DEPLOYMENT_OPTIONS_ANALYSIS.md  GATEWAY_ARCHITECTURE.md  GKE_INFERENCE_GATEWAY_ANALYSIS.md  GKE_REF_ANALYSIS.md  GOVERNANCE_CROSSWALK.md  GREEN_AGENT_EVOLUTION.md  GREEN_STACK_ARCHITECTURE.md  HOW_TO_DEMO_OBSERVABILITY.md  ISO_42001_COMPLIANCE.md  LANGFUSE_DASHBOARD_SETUP.md  LANGFUSE_DASHBOARD_SPEC.md  LANGSMITH_REFACTOR_ANALYSIS.md  LATENCY_STRATEGY.md  MACAW_REFACTOR_GUIDE.md  NEURO_SYMBOLIC_GOVERNANCE.md  PERFORMANCE.md  REFACTOR_RECOMMENDATION.md  SOVEREIGN_STACK.md  STPA_ANALYSIS.md  STPA_LANGGRAPH_MAPPING.md  STUDY_PLAN_ALIGNMENT.md  SYSTEM_DESCRIPTION_ISO_42001.md  TPU_MIGRATION_ANALYSIS.md  (+3 more)
eval/: test_eval.py
financial_advisor/: __init__.py  agent.py  archival.py  config.py  consensus.py  context.py  governance.py  graph.py  memory_agent_prompt.md  nemo_manager.py  nodes.py  prompt.py  prompt_utils.py  records_agent.py  safety.py  server.py  state.py  telemetry.py
governance_poc/: finance_policy.rego
models/: prod_scm_v1.pkl
policies/: generated_causal_rules.rego  policy.rego
scripts/: analyze_risk_logs.py  automated_auditor.py  causal_policy_induction.py  debug_prompt.py  debug_vllm.py  deontic_policy_extractor.py  evaluate_agent.py  migrate_prompts_to_langfuse.py  offline_risk_update.py  prepare_agent.py  proxy_backend.sh  proxy_ui.sh  reproduce_error.py  run_transpiler_job.py  simulate_risk_scenarios.py  test_openbb.py  train_causal_model.py  verify_agent_refactor.py  verify_colang_locally.py  verify_remote.py
src/: server.py  test_agent.py  verify_governor.py
terraform/: apis.tf  main.tf  nemo.tf  opa.tf  outputs.tf  secrets.tf  storage.tf  variables.tf
tests/: debug_agent.py  debug_deepseek.py  debug_repro_simple.py  test_adapters_di.py  test_agent_accuracy.py  test_agent_performance.py  test_autopt.py  test_causal_engine.py  test_causal_flow.py  test_config_manager.py  (+60 more)
(+363 files in other folders)
